Add strong-name signing to ical.NET assemblies.

--- a/v2/ical.NET.Collections/Ical.Net.Collections.csproj
+++ b/v2/ical.NET.Collections/Ical.Net.Collections.csproj
@@ -62,6 +62,12 @@
   <PropertyGroup>
     <RootNamespace>Ical.Net.Collections</RootNamespace>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\IcalNetStrongnameKey.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Core" />
     <!--  <Reference Include="Microsoft.CSharp" />
