Add strong-naming to .NET Core Ical libraries and tests.

--- a/net-core/Ical.Net.FrameworkUnitTests/Ical.Net.FrameworkUnitTests.csproj
+++ b/net-core/Ical.Net.FrameworkUnitTests/Ical.Net.FrameworkUnitTests.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>Ical.Net.FrameworkUnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\IcalNetStrongnameKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
