Remove net46 framework from net-core
When this is present the build will break on the mac b/c it doesn't have .net 4.6 installed.  Instead of trying to work around that (which isn't needed since we want netstandard for .net core support), we instead deprecate it.

We didn't go so far as to remove the .Net framework dirs as that would result in lots of git merge issues if we take new drops from master.

--- a/net-core/Ical.Net/Ical.Net.csproj
+++ b/net-core/Ical.Net/Ical.Net.csproj
@@ -1,13 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3</TargetFrameworks>
     <Version>4.1.8</Version>
     <Authors>Rian Stockbower, Douglas Day</Authors>
     <Company />
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\IcalNetStrongnameKey.snk</AssemblyOriginatorKeyFile>
-    <DebugSymbols Condition=" '$(TargetFramework)' == 'net46' ">true</DebugSymbols>
-    <DebugType Condition=" '$(TargetFramework)' == 'net46' ">full</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\Ical.Net.xml</DocumentationFile>
