--- a/net-core/Ical.Net.nuspec
+++ b/net-core/Ical.Net.nuspec
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>Ical.Net</id>
+        <id>csdisco.Ical.Net</id>
         <version>4.1.11</version>
-        <title>Ical.Net</title>
-        <authors>Rian Stockbower, Douglas Day</authors>
+        <title>csdisco.Ical.Net</title>
+        <authors>CSDISCO, Rian Stockbower, Douglas Day</authors>
         <owners>Rian Stockbower</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>An iCalendar (RFC 5545) control library for .NET.</description>
-        <projectUrl>https://github.com/rianjs/ical.net</projectUrl>
-        <licenseUrl>https://github.com/rianjs/ical.net/blob/master/license.md</licenseUrl>
+        <projectUrl>https://github.com/csdisco/ical.net</projectUrl>
+        <licenseUrl>https://github.com/csdisco/ical.net/blob/master/license.md</licenseUrl>
         <releaseNotes>https://github.com/rianjs/ical.net/blob/master/release-notes.md</releaseNotes>
         <iconUrl>https://github.com/rianjs/ical.net/raw/master/nuget_logo_150px.png</iconUrl>
         <tags>iCal Calendar icalendar ics outlook events rfc-5545 rfc-2445 dday</tags>
