--- a/net-core/Ical.Net.Core/Ical.Net.Core.csproj
+++ b/net-core/Ical.Net.Core/Ical.Net.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NodaTime" Version="3.0.0-alpha01" />
+    <PackageReference Include="NodaTime" Version="3.0.3" />
   </ItemGroup>
 
 </Project>
