target framework 4_7_2 upgrade to latest nodatime + nunit + other packages

--- a/v2/PerfTesting/PerfTesting.csproj
+++ b/v2/PerfTesting/PerfTesting.csproj
@@ -8,11 +8,12 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>PerfTesting</RootNamespace>
     <AssemblyName>PerfTesting</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NoWarn>NU1603;NU1605</NoWarn>
     <RuntimeIdentifier>win</RuntimeIdentifier>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
