--- a/v2/ical.NET.UnitTests/packages.config
+++ b/v2/ical.NET.UnitTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NodaTime" version="1.3.1" targetFramework="net461" />
-  <package id="NUnit" version="3.4.1" targetFramework="net40" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net40" />
+  <package id="NodaTime" version="3.0.0" targetFramework="net472" />
+  <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
