--- a/src/Ical.Net/Ical.Net.csproj
+++ b/src/Ical.Net/Ical.Net.csproj
@@ -1,7 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
+    <LangVersion>8</LangVersion>
+    <PackageVersion>4.2.0</PackageVersion>
+    <Title>Ical.Net</Title>
+    <PackageProjectUrl>https://github.com/rianjs/ical.net</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/rianjs/ical.net</RepositoryUrl>
+    <PackageReleaseNotes>hhttps://github.com/rianjs/ical.net/blob/master/release-notes.md</PackageReleaseNotes>
     <TargetFrameworks>netstandard2.0;net50</TargetFrameworks>
-    <Version>4.2.0</Version>
     <Authors>Rian Stockbower, Douglas Day, &amp; Contributors</Authors>
     <Company />
     <SignAssembly>true</SignAssembly>
@@ -10,7 +16,6 @@
     <DebugType>full</DebugType>
     <PackageId>Ical.Net</PackageId>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseFile>license.md</PackageLicenseFile>
     <Description>An iCalendar (RFC 5545) library. See https://github.com/rianjs/ical.net for details.</Description>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -21,11 +26,5 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\license.md">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
   </ItemGroup>
 </Project>
