Added option to collect errors while parsing the calendar.

--- a/src/Ical.Net.CoreUnitTests/Ical.Net.CoreUnitTests.csproj
+++ b/src/Ical.Net.CoreUnitTests/Ical.Net.CoreUnitTests.csproj
@@ -26,6 +26,7 @@
     <None Remove="Calendars\IcalCleaner\quotedprintable4.ics" />
     <None Remove="Calendars\IcalCleaner\quotedprintable_umlaute_specialcharacters.ics" />
     <None Remove="Calendars\IcalCleaner\RFC_attendees.ics" />
+    <None Remove="Calendars\Serialization\CollectErrors.ics" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
