--- a/src/Ical.Net.CoreUnitTests/Ical.Net.CoreUnitTests.csproj
+++ b/src/Ical.Net.CoreUnitTests/Ical.Net.CoreUnitTests.csproj
@@ -3,6 +3,7 @@
     <TargetFrameworks>netcoreapp3.1;net50</TargetFrameworks>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\IcalNetStrongnameKey.snk</AssemblyOriginatorKeyFile>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
