--- a/Ical.Net/Ical.Net.nuspec
+++ b/Ical.Net/Ical.Net.nuspec
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>laget.Ical.Net</id>
+    <id>Ical.Net</id>
     <title>Ical.Net</title>
     <version>$version$</version>
-    <authors>laget.se, Rian Stockbower, Douglas Day</authors>
-    <owners>laget.se</owners>
+    <authors>ical-org maintainers and contributors</authors>
+    <owners>ical-org</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>An iCalendar (RFC 5545) control library for .NET.</description>
-    <projectUrl>https://github.com/laget-se/ical.net</projectUrl>
-    <licenseUrl>https://github.com/laget-se/ical.net/blob/master/license.md</licenseUrl>
-    <releaseNotes>https://github.com/laget-se/ical.net/blob/master/release-notes.md</releaseNotes>
+    <description>The most popular iCalendar (RFC 5545) class library for .NET.</description>
+    <projectUrl>https://github.com/ical-org/ical.net</projectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <releaseNotes>https://github.com/ical-org/ical.net/blob/main/release-notes.md</releaseNotes>
     <tags>iCal Calendar icalendar ics outlook events rfc-5545 rfc-2445 dday</tags>
     <icon>assets\icon.png</icon>
-    <readme>assets\readme.md</readme>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
     <dependencies>
       <group targetFramework="net8.0">
         <dependency id="NodaTime" version="3.1.10" />
@@ -21,11 +21,6 @@
         <dependency id="System.Reflection.TypeExtensions" version="4.1.0" />
       </group>
       <group targetFramework="net6.0">
-        <dependency id="NodaTime" version="3.1.10" />
-        <dependency id="System.Runtime.Serialization.Primitives" version="4.3.0" />
-        <dependency id="System.Reflection.TypeExtensions" version="4.1.0" />
-      </group>
-      <group targetFramework="net5.0">
         <dependency id="NodaTime" version="3.1.10" />
         <dependency id="System.Runtime.Serialization.Primitives" version="4.3.0" />
         <dependency id="System.Reflection.TypeExtensions" version="4.1.0" />
@@ -47,7 +42,6 @@
     <file src="..\assets\icon.png" target="assets\" />
     <file src=".\bin\Release\net8.0\*" target="lib\net8.0\" />
     <file src=".\bin\Release\net6.0\*" target="lib\net6.0\" />
-    <file src=".\bin\Release\net5.0\*" target="lib\net5.0\" />
     <file src=".\bin\Release\netstandard2.1\*" target="lib\netstandard2.1\" />
     <file src=".\bin\Release\netstandard2.0\*" target="lib\netstandard2.0\" />
   </files>
