--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,29 +1,27 @@
-name: Tests
+﻿name: Tests
 
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches:
-      - master
+      - main
 
 jobs:
   tests:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: |
           8.0.x
-          7.0.x
           6.0.x
-          5.0.x
           3.1.x
     - name: Restore dependencies
       run: dotnet restore
